2006-12-14  Christian Neumair  <chris@gnome-de.org>

	* src/nautilus-open-terminal.c: (get_terminal_file_info): Also handle
	"ssh" URIs, and treat them like "sftp" URIs. GnomeVFS also handles
	both. Thanks to Gaëtan Podevijn <herlock@lelibre.net>.

2006-12-11  Ales Nyakhaychyk  <nab@mail.by>

	* configure.in: Add 'be' to ALL_LINGUAS

2006-11-20  Runa Bhattacharjee <runabh@gmail.com>

	* configure.in: Added Bengali India (bn_IN) to ALL_LINGUAS.

2006-11-20  Ankit Patel  <ankit644@yahoo.com>

	* configure.in: Added 'gu' (Gujarati) to ALL_LINGUAS.

2006-09-08  Pema Geyleg  <pgeyleg@gmail.com>

	* configure.in: Added 'dz' (Dzongkha) to ALL_LINGUAS.

== 0.7 "Coffee" Release ==

2006-08-01  Christian Neumair  <chris@gnome-de.org>

	* *: Release.

2006-08-01  Christian Neumair  <chris@gnome-de.org>

	* configure.in: (ALL_LINGUAS): Really add "ru".

2006-07-24  Arangel Angov <ufo@linux.net.mk>

	* configure.in: Added 'mk' (Macedonian) to ALL_LINGUAS.

2006-06-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added 'th' (Thai) to ALL_LINGUAS.

2006-04-19  Christian Neumair  <chris@gnome-de.org>

	* src/open-terminal.c: (nautilus_open_terminal_get_background_items),
	(nautilus_open_terminal_get_file_items), (open_terminal_menu_item_new), 
	(open_terminal_callback):
	setenv DISPLAY before spawning child process, restore it afterwards.

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-04  Gora Mohanty  <gmohanty@cvs.gnome.org>

        * configure.in: Added 'or' (Oriya) to ALL_LINGUAS.

2006-03-12  Mugurel Tudor  <mugurelu@gnome.ro>

	* configure.in: Added ro to ALL_LINGUAS

2006-03-02  Inaki Larranaga  <dooteo@euskalgnu.org>

	* configure.in	Added "eu" (Basque) in ALL_LINGUAS.

2006-01-24  Clytie Siddall <clytie@riverland.net.au>

	* configure.in	Added vi in ALL_LINGUAS line.

2006-01-23  Stanislav Brabec  <sbrabec@suse.cz>
