@@ -9,7 +9,7 @@ AC_SUBST(VERSION)
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
 AM_CONFIG_HEADER(config.h)
 
-NAUTILUS_REQUIRED=2.6.0
+NAUTILUS_REQUIRED=2.17.2
 EEL_REQUIRED=2.6.0
 LIBGNOME_DESKTOP_REQUIRED=2.9.91
 GLIB_REQUIRED=2.4.0
